# Beluga-Engine

./: CMakeLists.txt  LICENSE  README.md  exclude.txt  publish.bat
Beluga/: Beluga.vcxproj  Beluga.vcxproj.filters  CMakeLists.txt
Beluga/BelugaTest/: BelugaTest.vcxproj  BelugaTest.vcxproj.filters  CMakeLists.txt
Beluga/BelugaTest/Assets/CreateActorByFileName/: TestObject.xml
Beluga/BelugaTest/Include/: TestApp.h
Beluga/BelugaTest/Source/: ActorTest.cpp  AudioTest.cpp  BelugaTest.cpp  GraphicsTest.cpp  InputTest.cpp  LoggingTest.cpp  SystemTest.cpp  VectorTest.cpp
Beluga/GluaGen/: CMakeLists.txt  GluaGen.vcxproj  GluaGen.vcxproj.filters  Main.cpp
Beluga/GluaGen/Scripts/: FunctionGlue.lua  GainGlue.lua  GetGlue.lua  GluaGen.lua  SetGlue.lua  SetGlueParam_2.lua  TakeGlue.lua
Beluga/Include/Actors/: Actor.h
Beluga/Include/Audio/: Audio.h
Beluga/Include/Core/Camera/: Camera.h
Beluga/Include/Core/Layers/: ApplicationLayer.h  GameLayer.h  View.h
Beluga/Include/Core/Math/: MathHelper.h  Vector2.h
Beluga/Include/Core/Util/: GUID_Helper.h
Beluga/Include/Events/: Events.h  Processes.h
Beluga/Include/GUI/: GUI.h
Beluga/Include/Graphics/: Graphics.h
Beluga/Include/Input/: Input.h
Beluga/Include/Levels/: Level.h
Beluga/Include/Log/: Logging.h
Beluga/Include/Parshing/: tinyxml2.h
Beluga/Include/Physics/: Physics.h  PhysicsShape.h
Beluga/Include/Resources/: Resource.h
Beluga/Include/Scripting/: Scripting.h
Beluga/Include/Systems/: HardwareResource.h  System.h
Beluga/ResourcePacker/: CMakeLists.txt  Main.cpp  ResourcePacker.vcxproj  ResourcePacker.vcxproj.filters
Beluga/Source/Actor/: Actor.cpp
Beluga/Source/Audio/: Audio.cpp
Beluga/Source/Core/Camera/: Camera.cpp
Beluga/Source/Core/Layers/: ApplicationLayer.cpp  GameLayer.cpp
Beluga/Source/Events/: Events.cpp  Processes.cpp
Beluga/Source/GUI/: GUI.cpp
Beluga/Source/Graphics/: Graphics.cpp
Beluga/Source/Input/: Input.cpp
Beluga/Source/Levels/: Level.cpp
Beluga/Source/Log/: Logging.cpp
Beluga/Source/Middleware/Box2D/lib/Win32_Debug/: box2d.lib
Beluga/Source/Middleware/Box2D/lib/Win32_Release/: box2d.lib
Beluga/Source/Middleware/Box2D/lib/x64_Debug/: box2d.lib
Beluga/Source/Middleware/Box2D/lib/x64_Release/: box2d.lib
Beluga/Source/Middleware/Lua/lib/Win32_Debug/: Lua.exp  Lua.lib
Beluga/Source/Middleware/Lua/lib/Win32_Release/: Lua.exp  Lua.lib
Beluga/Source/Middleware/Lua/lib/x64_Debug/: Lua.exp  Lua.ilk  Lua.lib
Beluga/Source/Middleware/Lua/lib/x64_Release/: Lua.exp  Lua.iobj  Lua.ipdb  Lua.lib
Beluga/Source/Middleware/Lua/lib/x86_Debug/: Lua.ilk
Beluga/Source/Middleware/Lua/lib/x86_Release/: Lua.iobj  Lua.ipdb
Beluga/Source/Middleware/zlib/lib/Win32_Release/: zlibstat.lib
Beluga/Source/Middleware/zlib/lib/x64_Debug/: zlibstat.lib
Beluga/Source/Middleware/zlib/lib/x64_Release/: zlibstat.lib
Beluga/Source/Middleware/zlib/lib/x86_Debug/: zlibstat.lib
Beluga/Source/Parshing/: tinyxml2.cpp
Beluga/Source/Physics/: Physics.cpp  PhysicsShape.cpp
Beluga/Source/Resources/: Resource.cpp
Beluga/Source/Scripting/: Scripting.cpp
Beluga/Source/Systems/: HardwareResource.cpp  System.cpp
SandBox/: CMakeLists.txt  SandBox.vcxproj  SandBox.vcxproj.filters
SandBox/Include/: Game.h
SandBox/Src/: Game.cpp  Main.cpp
